--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
         <div class="intro">
             <div class="art">
                 ,---------------------------,
-                |  /---------------------\  |
-                | |                       | |
-                | |     Computer          | |
-                | |      Services         | |
-                | |       Company         | |
-                | |                       | |
-                |  \_____________________/  |
+                | ,-----------------------, |
+                | |      Terminal         | |
+                | |       Portfolio       | |
+                | |        with Some      | |
+                | |         CLI Tools     | |
+                | |_______________________| |
                 |___________________________|
               ,---\_____     []     _______/------,
             /         /______________\           /|
           /___________________________________ /  | ___
-          |                                   |   |    )
+          |                                   |   |    /
           |  _ _ _                 [-------]  |   |   (
           |  o o o                 [-------]  |  /    _)_
           |__________________________________ |/     / / /'
@@ -39,34 +38,15 @@
       / ____/___ ___  ___________ __   __   / //_/_  ______ ___  ____ ______
      / / __/ __ `/ / / / ___/ __ `/ | / /  / ,< / / / / __ `__ \/ __ `/ ___/
     / /_/ / /_/ / /_/ / /  / /_/ /| |/ /  / /| / /_/ / / / / / / /_/ / /    
-    \____/\__,_/\__,_/_/   \__,_/ |___/  /_/ |_\__,_/_/ /_/ /_/\__,_/_/    
-                                                    
+    \____/\__,_/\__,_/_/   \__,_/ |___/  /_/ |_\__,_/_/ /_/ /_/\__,_/_/                                                        
             </div>
+        </div>
+        <div class="help">
+            Welcome to my interactive web terminal.
+            For a list of available commands, type <span class="keyword">help</span>.
         </div>
 
         <div class="terminal">
-            <div class="command">
-                <p>
-                    <span class="os">  </span>
-                    <span class="user">guest@</span>
-                    <span class="host">gaurav-services.com</span>
-                    <span class="path">~</span>
-                    <span class="user_type"> $ </span>
-                    <span class="command_input" contenteditable="true">ls</span>
-                    <span class="cursor">|</span>
-                </p>
-            </div>
-            <div class="command">
-                <p>
-                    <span class="os">  </span>
-                    <span class="user">guest@</span>
-                    <span class="host">gaurav-services.com</span>
-                    <span class="path">~</span>
-                    <span class="user_type"> $ </span>
-                    <span class="command_input" contenteditable="true">ls</span>
-                    <span class="cursor">|</span>
-                </p>
-            </div>
         </div>
     </main>
     <script src="src/js/onLoad.js"></script>
