--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </div>
 
         <div class="help">
-            Welcome to my interactive web terminal.
-            For a list of available commands, type <span class="keyword">help</span>.
+            <p>Welcome to my interactive web terminal.
+            For a list of available commands, type <span class="keyword">help</span>.</p>
         </div>
 
         <div class="terminal">
