--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         
     </main>
-    <script type="module" src="src/js/onLoad.js"></script>
+    <script type="module" src="src/js/Script.js"></script>
     <!-- <script type="module" src="src/js/controller.js"></script> -->
 </body>
 </html>
