Create Seprate Class for each type of command(Seprate backend logic)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="/src/css/style.css">
     <link rel="shortcut icon" href="assets/images/favicon/terminal_32.png" type=" image/png">
     <link href="https://mshaugh.github.io/nerdfont-webfonts/build/firacode-nerd-font.css" rel="stylesheet">
     <title>Gaurav's CLI Toolbox</title>
@@ -49,11 +49,11 @@
             For a list of available commands, type <span class="keyword">help</span>.</p>
         </div>
 
-        <div class="terminal">
+        <div id="terminal">
         </div>
         
     </main>
-    <script type="module" src="src/js/Script.js"></script>
+    <script type="module" src="/src/js/Script.js"></script>
     <!-- <script type="module" src="src/js/controller.js"></script> -->
 </body>
 </html>
