--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/css/style.css">
-    <link rel="shortcut icon" href="assets/images/favicon/terminal_32.png" type=" image/png">
+    <link rel="shortcut icon" href="./assets/images/favicon/terminal_32.png" type=" image/png">
     <link href="https://mshaugh.github.io/nerdfont-webfonts/build/firacode-nerd-font.css" rel="stylesheet">
+    <link rel="stylesheet" href="./src/css/style.css">
     <title>Gaurav's CLI Toolbox</title>
 </head>
 <body>
