--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="assets/images/favicon/terminal_32.png" type=" image/png">
     <link href="https://mshaugh.github.io/nerdfont-webfonts/build/firacode-nerd-font.css" rel="stylesheet">
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/resume.css">
     <title>Gaurav's CLI Toolbox</title>
 </head>
 <body>
